force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/BMCServiceDesk__IncidentHistory__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpIncidentHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on incidents.</description>
    <label>Incident History</label>
    <nameField>
        <label>Incident History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>