force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__actionId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__actionId__c</fullName>
    <formula>BMCServiceDesk__FKAction__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to incidents. User-defined actions are used to record details of the steps taken to resolve an issue during the life cycle of an incident.</inlineHelpText>
    <label>Action~</label>
    <type>Text</type>
</CustomField>