force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__Attachments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Attachments__c</fullName>
    <description>Used to store references to files sent along with an Email</description>
    <label>Attachments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>