force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the client reference of the parent incident record when client is a contact.</description>
    <inlineHelpText>Stores the client reference of the parent incident record when client is a contact.</inlineHelpText>
    <label>Client - Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Histories</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>