force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__Client_User__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the client reference of the parent incident record when client is a user.</description>
    <inlineHelpText>Stores the client reference of the parent incident record when client is a user.</inlineHelpText>
    <label>Client - User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Users</relationshipName>
    <type>Lookup</type>
</CustomField>