force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__description__c</fullName>
    <inlineHelpText>This field is automatically set to the description of the user-defined action selected in the Action ID field. This description explains what the selected Action ID represents.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>