force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__FKAction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to incidents. User-defined actions are used to record details of the steps taken to resolve an issue during the life cycle of an incident.</inlineHelpText>
    <label>Action</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToIncident__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Action__c</referenceTo>
    <relationshipLabel>Incident Histories</relationshipLabel>
    <relationshipName>Incident_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>