force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__note__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__note__c</fullName>
    <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
    <label>Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>