force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__Reply_Console__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Reply_Console__c</fullName>
    <description>This field should be added to Console layout for replying to emails from incident console</description>
    <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos; || BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos;, 
			HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=IncidentHistoryConsoleReply&amp;recordId=&quot;+BMCServiceDesk__FKIncident__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name, 
			IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;), null)</formula>
    <label>Reply</label>
    <type>Text</type>
</CustomField>