force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/BMCServiceDesk__RichTextNote__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RichTextNote__c</fullName>
    <description>This field used to store the rich Text Email conversation.</description>
    <label>RichTextNote</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>