force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>BMCServiceDesk__actionId__c = &quot;Email Send&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>