force-app/main/default/objects/BMCServiceDesk__IncidentHistory__c/validationRules/BMCServiceDesk__durationFormatValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__durationFormatValidation</fullName>
    <active>true</active>
    <description>duration should be in format hh:mm</description>
    <errorConditionFormula>AND(NOT(REGEX( BMCServiceDesk__duration__c , &apos;[0-9]{2}:[0-9]{2}&apos;)), NOT(OR(ISNULL(BMCServiceDesk__duration__c), ISBLANK(BMCServiceDesk__duration__c) )  ))</errorConditionFormula>
    <errorMessage>Please enter duration in the format hh:mm</errorMessage>
</ValidationRule>